# dateutil-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODOS.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: BASELINE.md  RESULTS.md  bench_easter.py  bench_parser.py  bench_relativedelta.py  bench_rrule.py  bench_tz.py  bench_v0_v1.py  conftest.py
crates/dateutil-core/: CLAUDE.md  Cargo.toml  README.md
crates/dateutil-core/benches/: benchmarks.rs
crates/dateutil-core/src/: common.rs  easter.rs  error.rs  lib.rs  parser.rs  relativedelta.rs  rrule.rs  tz.rs
crates/dateutil-core/src/parser/: compact.rs  hms.rs  isoparser.rs  parserinfo.rs  tokenizer.rs
crates/dateutil-core/src/rrule/: iter.rs  parse.rs  set.rs
crates/dateutil-core/src/tz/: file.rs  local.rs  offset.rs  utc.rs
crates/dateutil-py/: Cargo.toml
crates/dateutil-py/src/: lib.rs  py.rs
crates/dateutil-py/src/py/: common.rs  conv.rs  easter.rs  parser.rs  relativedelta.rs  rrule.rs  tz.rs
crates/dateutil-rs/: Cargo.toml
crates/dateutil-rs/benches/: benchmarks.rs
crates/dateutil-rs/src/: common.rs  easter.rs  lib.rs  parser.rs  relativedelta.rs  rrule.rs  tz.rs  utils.rs
crates/dateutil-rs/src/parser/: isoparser.rs
crates/dateutil-rs/src/rrule/: iter.rs
crates/dateutil-rs/src/tz/: file.rs  local.rs  offset.rs  range.rs  utc.rs
python/dateutil/: __init__.py  _native.pyi  easter.py  parser.py  relativedelta.py  rrule.py  tz.py  utils.py
python/dateutil/zoneinfo/: __init__.py
python/dateutil_rs/: __init__.py  _native.pyi  common.py  easter.py  parser.py  relativedelta.py  rrule.py  tz.py  utils.py
python/dateutil_rs/v1/: __init__.py  _native.pyi  common.py  easter.py  parser.py  relativedelta.py  rrule.py  tz.py
src/dateutil/: _common.py  easter.py  relativedelta.py  rrule.py
src/dateutil/parser/: __init__.py  _parser.py  isoparser.py
src/dateutil/tz/: __init__.py  _common.py  _factories.py  tz.py  win.py
src/dateutil/zoneinfo/: __init__.py
tests/: _common.py  conftest.py  test_compat.py  test_dateutil_rs.py  test_imports.py  test_internals.py  test_isoparser.py  test_parser.py  test_relativedelta.py  test_rrule.py  test_type_compat.py  test_tz.py  test_utils.py
tests/dateutil_rs/: conftest.py  test_easter.py  test_parser.py  test_relativedelta.py  test_rrule.py  test_tz.py  test_weekday.py
tests/property/: test_isoparse_prop.py  test_tz_prop.py
