[workspace]
members = ["crates/dateutil-core", "crates/dateutil-py"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/wakita181009/dateutil-rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.dev.package."*"]
opt-level = 3
