[project]
name = "python-dateutil-rs"
version = "0.0.3"
description = "A Rust-backed port of python-dateutil"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["python-dateutil>=2.9"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "pytest-benchmark>=5.2",
    "freezegun>=1.5",
    "hypothesis>=6.0",
    "maturin>=1.0",
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/dateutil-rs/Cargo.toml"
features = ["python"]
python-source = "python"
module-name = "dateutil_rs._native"
include = [
    { path = "LICENSE", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-disable"
python_files = ["test_*.py", "bench_*.py"]
xfail_strict = true
filterwarnings = [
    "error",
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
markers = [
    "gettz",
    "import_star",
    "isoparser",
    "parserinfo",
    "rrule",
    "rruleset",
    "rrulestr",
    "smoke",
    "tz_resolve_imaginary",
    "tzfile",
    "tzlocal",
    "tzoffset",
    "tzstr",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "python"]
extend-exclude = ["tests/test_imports.py", "tests/test_import_star.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    # Naming — follow python-dateutil's public API
    "N801",   # class names (weekday, rrule, etc.)
    "N802",   # method names
    "N806",   # variable names
    "N815",   # mixedCase class variables (_handle_FREQ, etc.)
    "N816",   # mixed-case variables
    # Pycodestyle — original code style
    "E402",   # late imports used intentionally in __init__.py
    "E501",   # line length (handled by formatter where possible)
    "E701",   # multiple statements on one line (original test style)
    "E721",   # type comparison (original test style)
    "E731",   # lambda assignment (original code pattern)
    "E722",   # bare except (original code)
    "E741",   # ambiguous variable names
    # Pyflakes — re-exports and deprecation wrappers
    "F401",   # re-exports in __init__.py
    "F403",   # wildcard imports (used in __init__.py and tests)
    "F405",   # names from star imports
    "F811",   # redefinitions for deprecation wrappers
    "F841",   # unused local variables (original code)
    # Pyupgrade — keep original formatting
    "UP031",  # percent format
    "UP036",  # version blocks
    # Bugbear — original code patterns
    "B006",   # mutable default arguments
    "B007",   # unused loop variables
    "B015",   # pointless comparison (intentional in tests)
    "B020",   # loop variable overrides iterable
    "B028",   # stacklevel in warnings
    "B029",   # bare except
    "B904",   # raise from
    "B905",   # zip without strict= (original code)
    # Simplify — keep original structure
    "SIM102", # nested ifs
    "SIM105", # try-except-pass
    "SIM108", # ternary rewrites
    "SIM110", # reimplemented builtins
    "SIM114", # combined if branches
    "SIM115", # context manager for open()
    "SIM117", # nested with statements
    "SIM201", # negated == (intentional in tests)
    "SIM202", # negated != (intentional in tests)
    "SIM211", # bool idioms
    # Ruff-specific
    "RUF001", # ambiguous unicode (intentional in tests)
    "RUF005", # concatenation vs unpacking (original style)
    "RUF012", # mutable class attributes (original parserinfo design)
    "RUF059", # unpacked unused variables
]

[tool.ruff.lint.isort]
known-first-party = ["dateutil"]
