[project]
name = "python-dateutil-rs"
version = "0.0.15"
description = "A Rust-backed port of python-dateutil"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "python-dateutil>=2.9",
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "pytest-benchmark>=5.2",
    "freezegun>=1.5",
    "hypothesis>=6.151",
    "maturin>=1.0",
]

[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/dateutil-rs/Cargo.toml"
features = ["python", "v1"]
python-source = "python"
module-name = "dateutil_rs._native"
include = [
    { path = "LICENSE", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--benchmark-disable"
python_files = ["test_*.py", "bench_*.py"]
xfail_strict = true
filterwarnings = [
    "error",
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
markers = [
    "gettz",
    "import_star",
    "isoparser",
    "parserinfo",
    "rrule",
    "rruleset",
    "rrulestr",
    "smoke",
    "tz_resolve_imaginary",
    "tzfile",
    "tzlocal",
    "tzoffset",
    "tzstr",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.9",
    "types-python-dateutil>=2.9.0.20260408",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["tests", "python"]
extend-exclude = ["tests/test_imports.py", "tests/test_import_star.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    # Naming — match python-dateutil's public API (parserinfo, weekday, rrule, etc.)
    "N801",   # class names
    "N806",   # variable names in functions
    # Re-exports in __init__.py and wrapper modules
    "F401",   # imported but unused (re-exports)
    # python-dateutil compatibility patterns
    "B020",   # loop variable overrides iterable (parser.py)
    "RUF012", # mutable class attributes (parserinfo design)
]

[tool.ruff.lint.per-file-ignores]
# Original python-dateutil test suite — avoid modifying upstream test code
"tests/*" = [
    "N802",   # function names (assertPicklable, setUp, etc.)
    "N806",   # variable names
    "E402",   # late imports
    "E501",   # line length
    "E721",   # type comparison
    "E722",   # bare except
    "F401",   # unused imports
    "F841",   # unused local variables
    "UP031",  # percent format
    "B007",   # unused loop variables
    "B015",   # pointless comparison (intentional)
    "B905",   # zip without strict=
    "SIM201", # negated ==
    "SIM202", # negated !=
    "RUF001", # ambiguous unicode (Cyrillic test data)
    "RUF005", # concatenation vs unpacking
    "RUF012", # mutable class attributes
    "RUF059", # unpacked unused variables
]
# Benchmarks use uppercase constants matching dateutil API
"benchmarks/*" = ["N806"]

[tool.ruff.lint.isort]
known-first-party = ["dateutil"]
