[package]
name = "dateutil-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Performance-optimized date utility library for Rust"

[lib]
name = "dateutil_core"
crate-type = ["rlib"]

[dependencies]
bitflags = "2"
chrono = "0.4"
phf = { version = "0.13", features = ["macros"] }
rustc-hash = "2"
smallvec = "1.15"
thiserror = "2"
iana-time-zone = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
