[package]
name = "dateutil"
description = "Fast date utility library — parser, relativedelta, rrule, timezone (Rust reimplementation of python-dateutil)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["date", "datetime", "parser", "rrule", "timezone"]
categories = ["date-and-time", "parser-implementations"]
readme = "README.md"

[lib]
name = "dateutil"
crate-type = ["rlib"]

[dependencies]
bitflags = "2"
chrono = "0.4"
phf = { version = "0.13", features = ["macros"] }
rustc-hash = "2"
smallvec = "1.15"
thiserror = "2"
iana-time-zone = "0.1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
