[package]
name = "dateutil-py"
description = "PyO3 bindings for the dateutil-core crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dateutil_py"
crate-type = ["rlib"]

[dependencies]
dateutil = { path = "../dateutil-core" }
chrono = "0.4"
pyo3 = { version = "0.28", features = ["extension-module", "chrono"], optional = true }

[features]
default = []
python = ["pyo3"]
