[package]
name = "dateutil-rs"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "Rust port of python-dateutil"
readme = "../../README.md"

[lib]
name = "dateutil_rs"
crate-type = ["rlib"]

[dependencies]
chrono = "0.4"
thiserror = "2"
pyo3 = { version = "0.28", features = ["extension-module", "chrono"], optional = true }

[features]
default = []
python = ["pyo3"]
