[package]
name = "dateutil-rs"
version = "0.0.14"
edition = "2021"
license = "MIT"
description = "Rust port of python-dateutil"
readme = "../../README.md"

[lib]
name = "dateutil_rs"
crate-type = ["rlib"]

[dependencies]
chrono = "0.4"
thiserror = "2"
pyo3 = { version = "0.28", features = ["extension-module", "chrono"], optional = true }
dateutil-py = { path = "../dateutil-py", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
python = ["pyo3"]
v1 = ["dateutil-py/python"]
